# kubectl-pampering

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-env  pyproject.toml
app/api/: settings.py
app/polls/: admin.py  urls.py  views.py
app/polls/migrations/: 0001_initial.py
kubernetes/: django.yml  postgres.yml
