[tool.poetry]
name = "devops"
version = "0.1.0"
description = ""
authors = ["pavivin <pavivin@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1.7"
psycopg2-binary = "^2.9.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
